--- a/galeria.html
+++ b/galeria.html
@@ -71,6 +71,21 @@
         </div>
     </div>
 
+    <div class="container-fluid">
+        <p>"Donde no hay pan, hasta los perros se van."</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-xs-6">
+                <img src="https://placedog.net/800/640?id=46" alt="">
+                <img src="https://placedog.net/800/640?id=71" alt="">
+                <img src="https://placedog.net/800/640?id=84" alt="">
+            </div>
+        </div>
+    </div>
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
